# esp_mcp251xfd

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  idf_component.yml
.github/: CODEOWNERS  dependabot.yml
